--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  font-family: 'Karantina', sans-serif;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
