--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,4 +1,4 @@
-.center {
+.centerfull {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,8 +6,15 @@
     height: 100vh;
 }
 
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .upload {
-    border: 4px dashed #ccc;
+    border: 2px dotted #8e8e8e;
     border-radius: 10px;
     background-color: #f5f5f5;
     padding: 20px;
